[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/HUD/menu_button.gd" type="Script" id=1]
[ext_resource path="res://Assets/Textures/UI/badges1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Textures/UI/badges7.png" type="Texture" id=3]
[ext_resource path="res://Assets/Textures/UI/badges8.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Singletons/Tooltips/tooltip_node.gd" type="Script" id=5]

[node name="menu_button" type="Control"]
anchor_right = 0.071
anchor_bottom = 0.121
margin_right = -0.320007
margin_bottom = 0.319992
rect_min_size = Vector2( 136, 131 )
mouse_filter = 2
script = ExtResource( 1 )

[node name="shadow" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.294118 )
anchor_right = 1.035
anchor_bottom = 1.0
margin_top = 4.0
margin_right = -4.75999
margin_bottom = 65.0
mouse_filter = 2
texture = ExtResource( 4 )

[node name="TextureButton" type="TextureButton" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 61.0
texture_normal = ExtResource( 2 )

[node name="TooltipNode" type="Control" parent="TextureButton"]
anchor_right = 1.0
anchor_bottom = 0.662
script = ExtResource( 5 )
header = "test"
body = "test"

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
anchor_right = 1.035
anchor_bottom = 1.0
margin_top = -3.0
margin_right = -4.76001
margin_bottom = -3.0
mouse_filter = 2
texture = ExtResource( 3 )

[connection signal="mouse_entered" from="TextureButton" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_TextureButton_mouse_exited"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
